# Embedding-Playground

./: .gitignore  .pre-commit-config.yaml  Makefile  Makefile.hooks.mk  README.md  README.md.old  app.py  dev.sh  pyproject.toml
mk/: ai-commit.mk  common.mk  cxx.mk  python.mk  streamlit.mk  sv.mk
tools/hooks/: ai_commit_msg.sh  prepare-commit-msg
